--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "Soccer Video Analytics"
+name = "GAA Computer Vision Model"
 version = "0.1.0"
 description = ""
-authors = ["Diego Marvid <dmarvid@tryolabs.com>", "Diego Fernandez <dfernandez@tryolabs.com"]
+authors = ["Donal Conlon - Sportedge, donal@sportedge.io"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12.0"
 norfair = {git = "https://github.com/tryolabs/norfair.git", rev = "master"}
 torch = "^1.12.1"
 opencv-python = "^4.6.0.66"
@@ -18,6 +18,9 @@ PyYAML = "^6.0"
 tqdm = "^4.64.1"
 seaborn = "^0.12.0"
 ipython = "^8.5.0"
+sahi = "^0.11.14"
+supervision = "^0.14.0"
+psutil = "^5.9.5"
 
 [tool.poetry.dev-dependencies]
 
