--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ ipython = "^8.5.0"
 sahi = "^0.11.14"
 supervision = "^0.14.0"
 psutil = "^5.9.5"
+ultralytics = "^8.0.186"
 
 [tool.poetry.dev-dependencies]
 
