--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = ""
 authors = ["Donal Conlon - Sportedge, donal@sportedge.io"]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12.0"
+python = "3.9.6"
 norfair = {git = "https://github.com/tryolabs/norfair.git", rev = "master"}
 torch = "^1.12.1"
 opencv-python = "^4.6.0.66"
 numpy = "^1.23.4"
-Pillow = "^9.2.0"
+Pillow = "9.2.0"
 matplotlib = "^3.6.1"
 pandas = "^1.5.0"
 torchvision = "^0.13.1"
@@ -19,7 +19,6 @@ tqdm = "^4.64.1"
 seaborn = "^0.12.0"
 ipython = "^8.5.0"
 sahi = "^0.11.14"
-supervision = "^0.14.0"
 psutil = "^5.9.5"
 ultralytics = "^8.0.186"
 
