--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Donal Conlon - Sportedge, donal@sportedge.io"]
 
 [tool.poetry.dependencies]
-python = "^3.9.6"
+python = ">=3.9.6,<3.12.0"
 norfair = "^2.2.0"
 torch = "^1.12.1"
 opencv-python = "^4.6.0.66"
